# chemical-charts

./: .gitignore  README.md  delaunay_triangulation_error.md  glossary_system_properties.md  pyproject.toml
chemical_charts/: config.py  contour_plot.py  contour_zones_processor.py  example.env  ground_truth_prompt_pipeline.py  input_image_path_utility.py  input_image_set_builder.py  main.py  point_selection_strategies.py  thermo_calculator.py
chemical_charts/prompts/: ground_truth_processors.py  point_selection_strategies.py
data/: .gitignore
experiments/experiment_01_contour_plots/: 01_plotly.ipynb  02b_plotly.ipynb  03b_plotly.ipynb  04a_custom_plot_logic.ipynb
experiments/experiment_02_data/: 01b_functions.ipynb  02a_pycalphad.ipynb
