[tool.poetry]
name = "chemical-charts"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "chemical_charts"}]

[tool.poetry.dependencies]
python = "^3.10"
plotly = "^5.14.1"
ipywidgets = "^8.0.6"
numpy = "^1.24.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
