[tool.poetry]
name = "chemical-charts"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "chemical_charts"}]

[tool.poetry.dependencies]
python = "^3.10"
plotly = "^5.14.1"
ipywidgets = "^8.0.6"
numpy = "^1.24.3"
scikit-image = "^0.20.0"
nbformat = "^5.8.0"
kaleido = "0.2.1"
pycalphad = "^0.10.2"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
